apps/argocd/argocd/manifests/argocd.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: ArgoCD
    gethomepage.dev/group: Platform
    gethomepage.dev/icon: argo-cd.svg
    gethomepage.dev/app: argocd-server
    gethomepage.dev/namespace: argocd
    gethomepage.dev/pod-selector: app.kubernetes.io/name=argocd-server
spec:
  parentRefs:
    - name: gateway
      namespace: platform-system
      sectionName: https
  hostnames:
    - argocd.edgard.org
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
